--- a/index.html
+++ b/index.html
@@ -3,18 +3,31 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap/style.css">
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
     <script type="text/javascript" src='searcher.js'></script>
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body ng-app="searcher-app">
-    <div class="row" ng-controller="mainCtrl">
-        <form class="" id="myForm" ng-submit="submitted=true; submit();" novalidate>
-            <input type='text' ng-data="search_term" placeholder="Enter your search term" required>
-            <button value="submit">submit</button>
-        </form>
+    <div class="container" ng-controller="mainCtrl">
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <form name="myForm" ng-submit="submitted = true; submit();" class="control-label" novalidate>
+                    <input type='text' class="form-control" ng-model="search_term" name="searchTerm" placeholder="Enter your search term" required>
+                    <button class="btn btn-primary" value="submit">submit</button>
+                    <span class="error" ng-show="submitted && myForm.searchTerm.$error.required">Required</span>
+                </form>
+            </div>
+            <div class="col-md-4" ng-show="submitted && loading">LOADING your images ...</div>
+        </div>
+
+        <div class="row result"></div>
+            <div ng-repeat="image in result" class="col-md-3">
+                <a href="{{image.images.link}}"><img src="{{image.images.low_resolution.url}}"> </a>
+            </div>
+        </div>
     </div>
-    {{search_term}}
 </body>
 </html>
